--- a/main.html
+++ b/main.html
@@ -10,6 +10,47 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<form>
+		<div><label for=name>Name8 :</label>
+		<input type="text" id="name"></div><br>
+
+		<div><label for=email>Email :</label>
+		<input type="email" id="email"></div><br>
+
+		<div>
+			<label for=gender>Gender :</label><br>
+			Male:<input type="radio" name="gender" checked>
+			Female:<input type="radio" name="gender">
+		</div><br>
+
+<div>
+<label for=options>Car Brand :</label>
+<select name="brands" id="cars">
+	<option value=cars>--Please choose an option--</option>
+	<option value=cars>BMW</option>
+	<option value=cars>Audi</option>
+	<option value=cars>Mercedez</option></select><br><br>
+
+		<div>
+			<label for=carage>Car Age:</label>
+			<input type="text" name="carage" id="carage">
+		</div><br>
+
+	<div>
+		<label for=dop> Date of Purchase(dop):</label>
+		<input type="date" name="dop" id="dop">
+	</div><br>
+
+	<div>
+		<label for=password> Password:</label>
+		<input type="text" name="password" id="password">
+	</div><br>
+
+<button type="submit" value="submit">
+		Submit button
+	</button><br>
+	
+	</form>
 
 </body>
 
