--- a/main.html
+++ b/main.html
@@ -10,12 +10,12 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<form>
+	<form method="post">
 		<div><label for=name>Name8 :</label>
-		<input type="text" id="name"></div><br>
+		<input type="text" id="name" required></div><br>
 
 		<div><label for=email>Email :</label>
-		<input type="email" id="email"></div><br>
+		<input type="email" id="email" required></div><br>
 
 		<div>
 			<label for=gender>Gender :</label><br>
@@ -24,7 +24,7 @@
 		</div><br>
 
 <div>
-<label for=options>Car Brand :</label>
+<label for=cars>Car Brand :</label>
 <select name="brands" id="cars">
 	<option value=cars>--Please choose an option--</option>
 	<option value=cars>BMW</option>
@@ -33,17 +33,17 @@
 
 		<div>
 			<label for=carage>Car Age:</label>
-			<input type="text" name="carage" id="carage">
+			<input type="text" name="carage" id="carage"required>
 		</div><br>
 
 	<div>
 		<label for=dop> Date of Purchase(dop):</label>
-		<input type="date" name="dop" id="dop">
+		<input type="dop" name="dop" id="dop" required>
 	</div><br>
 
 	<div>
 		<label for=password> Password:</label>
-		<input type="text" name="password" id="password">
+		<input type="password" name="password" id="password" required>
 	</div><br>
 
 <button type="submit" value="submit">
