--- a/main.html
+++ b/main.html
@@ -19,8 +19,8 @@
 
 		<div>
 			<label for=gender>Gender :</label><br>
-			Male:<input type="radio" name="gender" checked>
-			Female:<input type="radio" name="gender">
+			Male:<input type="radio" name="gender" checked required>
+			Female:<input type="radio" name="gender" required>
 		</div><br>
 
 <div>
